--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,42 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+#built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+.idea
+*.iml
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+captures/
+build/
+
+*.hprof
+hs_err*
+replay_pid*
